--- a/index.html
+++ b/index.html
@@ -63,14 +63,14 @@
     <div class="container">
         <h2 class="section-title">Обо мне</h2>
         <div class="about__inner">
-            <div class="about__images-inner">
+            <!-- <div class="about__images-inner"> -->
                 <div class="about__images">
                     <img src="assets/img/about_me1.png" alt="">
                 </div>
-                <div class="about__imges--mobile">
+                <!-- <div class="about__imges--mobile">
                     <img src="assets/img/about_me2.png" alt="">
                 </div>
-            </div>
+            </div> -->
             <div class="about__content">
                 <p>Фотография для меня - это возможность творить искусство.
                 Ищу индивидуальный подход к каждому клиенту.</p>
