Daska good luck

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     </div>
 </section>
 
-<!--
+
     <section class="work s-block">
         <div class="container">
             <h2 class="section-title section-title--ml">МОИ РАБОТЫ</h2>
@@ -148,13 +148,13 @@
                     </div>
                     <div class="stages__content">
                         <h3 class="stages__title">
-                            <span>01</span>
-                            Знакомство
+                            <span>02</span>
+                            Подбор образа
                         </h3>
                         <div class="stages__box">
-                            <p>Перед каждой съемкой мне важно
-                                узнать вас поближе, чтобы в
-                                процессе работы вы ошущали себя</p>
+                            <p>Обсудим вместе какой стиль вам ближе.
+                                Затем подберем что-нибудь из вашего
+                                гардероба или возьмем наряд в аренду</p>
                         </div>
                     </div>
                 </div>
@@ -164,20 +164,20 @@
                     </div>
                     <div class="stages__content">
                         <h3 class="stages__title">
-                            <span>01</span>
-                            Знакомство
+                            <span>03</span>
+                            Подбор локации
                         </h3>
                         <div class="stages__box">
-                            <p>Перед каждой съемкой мне важно
-                                узнать вас поближе, чтобы в
-                                процессе работы вы ошущали себя</p>
+                            <p>Выберем для вас соответствующую
+                                локацию. Например: городская улица,
+                                рассвет на берегу или же фотостудия</p>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-
+<!--
 <section class="services s-block">
     <div class="container">
         <h2 class="section-title section-title--ml">УСЛУГИ</h2>
