--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Anastasia Reshkova</title>
     <link rel="stylesheet" href="assets/css/swiper-bundle.min.css">
     <link rel="stylesheet" href="assets/css/normalize.css">
+    <link rel="stylesheet" href="assets/css/animation.css">
     <link rel="stylesheet" href="assets/css/main.css">
     <link rel="stylesheet" href="assets/css/media.css">
 </head>
@@ -119,7 +120,7 @@
         <div class="container">
             <h2 class="section-title section-title--ml">ЭТАПЫ РАБОТЫ</h2>
             <div class="stages-work__inner stages">
-                    <div class="stages-item">
+                <div class="stages-item" data-aos="fade-right" data-aos-duration="1000">
                         <div class="stages__img">
                             <img src="assets/img/acquaintance.png" alt="">
                         </div>
@@ -135,8 +136,8 @@
                                     максимально комфортно</p>
                             </div>
                         </div>
-                    </div>
-                    <div class="stages-item">
+                </div>
+                <div class="stages-item" data-aos="fade-left" data-aos-duration="1500">
                         <div class="stages__img">
                             <img src="assets/img/acquaintance.png" alt="">
                         </div>
@@ -151,8 +152,8 @@
                                     гардероба или возьмем наряд в аренду</p>
                             </div>
                         </div>
-                    </div>
-                    <div class="stages-item">
+                </div>
+                <div class="stages-item" data-aos="fade-right" data-aos-duration="2000">
                         <div class="stages__img">
                             <img src="assets/img/acquaintance.png" alt="">
                         </div>
@@ -167,7 +168,7 @@
                                     рассвет на берегу или же фотостудия</p>
                             </div>
                         </div>
-                    </div>
+                </div>
             </div>
         </div>
     </section>
@@ -176,19 +177,19 @@
         <div class="container">
             <h2 class="section-title section-title--ml">УСЛУГИ</h2>
             <div class="services__inner">
-                <div class="services__item">
+                <div class="services__item" data-aos="zoom-out" data-aos-duration="800">
                     <div class="services__title">Индивидуальная фотосессия</div>
                     <a href="#" class="services__btn">Подробнее</a>
                 </div>
-                <div class="services__item">
+                <div class="services__item" data-aos="zoom-out" data-aos-duration="1000">
                     <div class="services__title">Фотосессия <span>в студии</span></div>
                     <a href="#" class="services__btn">Подробнее</a>
                 </div>
-                <div class="services__item">
+                <div class="services__item" data-aos="zoom-out" data-aos-duration="1200">
                     <div class="services__title">Фотосессия с визажистом</div>
                     <a href="#" class="services__btn">Подробнее</a>
                 </div>
-                <div class="services__item">
+                <div class="services__item" data-aos="zoom-out" data-aos-duration="1400">
                     <div class="services__title">Ретушь <span>фото</span></div>
                     <a href="#" class="services__btn">Подробнее</a>
                 </div>
@@ -276,7 +277,7 @@
                             <input type="text" class="form-input" placeholder="Ваше имя">
                             <input type="tel" class="form-input" placeholder="Ваш номер">
                         </div>
-                        <textarea class="form-textarea" cols="30" rows="3" placeholder="Какая фотосессия вам нужна"></textarea>
+                        <textarea class="form-textarea" cols="30" rows="6" placeholder="Какая фотосессия вам нужна"></textarea>
                         <div class="contacts__btn-inner">
                             <button type="submit" class="contacts__btn">Записаться</button>
                         </div>
@@ -290,6 +291,7 @@
     </section>
 
     <script src="assets/js/swiper-bundle.min.js"></script>
+    <script src="assets/js/animation.js"></script>
     <script src="assets/js/index.js"></script>
 
 </body>
